<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="2dp"
        android:rowCount="5"
        android:columnCount="4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:textColor="@color/white"
            android:background="@drawable/op_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Multiplay"
            android:textColor="@color/white"
            android:background="@drawable/op_button"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Minus"
            android:textColor="@color/white"
            android:background="@drawable/op_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            android:text="@string/Dot"
            android:textColor="@color/white"
            android:background="@drawable/dot"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textColor="@color/white"
            android:background="@drawable/clr_button"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textColor="@color/white"
            android:background="@drawable/op_button"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:text="@string/Equal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/op_button"
            android:layout_columnSpan="4"/>


    </GridLayout>

</LinearLayout>